--- a/Languages/English/Keyed/Keys.xml
+++ b/Languages/English/Keyed/Keys.xml
@@ -8,4 +8,5 @@
     <RG.FogVelocity>Fog velocity</RG.FogVelocity>
     <RG.FogTemp>Fog temperature</RG.FogTemp>
     <RG.PuddleChance>Puddle spawn chance</RG.PuddleChance>
+	<RG.SpawnFogOnHotSprings>Spawn fogs on hot springs</RG.SpawnFogOnHotSprings>
 </LanguageData>
